# web_grp_lab

./: Cargo.toml  README.md  bugtracker.db
migrations/: 0001_initial.up.sql
src/: database.rs  main.rs  models.rs  state.rs
src/routes/: auth.rs  bugs.rs  mod.rs  projects.rs
templates/: assign_bug.html
